@@ -3,24 +3,15 @@
 -include_lib("eunit/include/eunit.hrl").
 -include_lib("snabbkaffe.hrl").
 
-%% Strict Pairs No Guards
--define(SPNG(Trace),
-        ?find_pairs( true
-                   , #{foo := _A}, #{bar := _A}
+%% Pairs No Guards
+-define(PNG(Trace),
+        ?find_pairs( #{foo := _A}, #{bar := _A}
                    , Trace
                    )).
 
-%% Fuzzy Pairs No Guards
--define(FPNG(Trace),
-        ?find_pairs( false
-                   , #{foo := _A}, #{bar := _A}
-                   , Trace
-                   )).
-
-%% Strict Pairs With Guard
--define(SPWG(Trace),
-        ?find_pairs( true
-                   , #{foo := _A}, #{bar := _B}, _A + 1 =:= _B
+%% Pairs With Guard
+-define(PWG(Trace),
+        ?find_pairs( #{foo := _A}, #{bar := _B}, _A + 1 =:= _B
                    , Trace
                    )).
 
@@ -46,54 +37,40 @@
 -define(bar(A), #{bar => A}).
 
 -define(pair(A), {pair, #{foo := A}, #{bar := A}}).
--define(singleton(A), {singleton, #{foo := A}}).
+-define(unmatched_cause(A), {unmatched_cause, #{foo := A}}).
+-define(unmatched_effect(A), {unmatched_effect, #{bar := A}}).
 
 -define(error_msg, "Effect occurs before cause").
 
--define(error_msg_cause, "Cause without effect").
+-define(error_msg_cause, "Causality violation").
 
-spng_success_test() ->
+png_success_test() ->
   ?assertMatch( []
-              , ?SPNG([])
+              , ?PNG([])
               ),
   ?assertMatch( []
-              , ?SPNG([#{quux => 1}, #{quux => 2}])
+              , ?PNG([#{quux => 1}, #{quux => 2}])
               ),
   ?assertMatch( [?pair(1), ?pair(owo)]
-              , ?SPNG([?foo(1), ?foo(owo), foo, ?bar(owo), ?bar(1), bar])
+              , ?PNG([?foo(1), ?foo(owo), foo, ?bar(owo), ?bar(1), bar])
               ),
-  ?assertMatch( [?singleton(1), ?pair(2)]
-              , ?SPNG([?foo(1), ?foo(2), foo, ?bar(2), bar])
+  ?assertMatch( [?unmatched_cause(1), ?pair(2)]
+              , ?PNG([?foo(1), ?foo(2), foo, ?bar(2), bar])
               ),
-  ?assertMatch( [?singleton(1), ?pair(2), ?pair(owo)]
-              , ?SPNG([?foo(1), ?foo(2), ?bar(2), ?foo(owo), ?bar(owo)])
+  ?assertMatch( [?unmatched_cause(1), ?pair(2), ?pair(owo)]
+              , ?PNG([?foo(1), ?foo(2), ?bar(2), ?foo(owo), ?bar(owo)])
+              ),
+  ?assertMatch( [ ?unmatched_cause(1), ?unmatched_effect(owo)
+                , ?unmatched_cause(owo), ?pair(2), ?unmatched_effect(44)
+                ]
+              , ?PNG([ ?foo(1), ?bar(owo), ?foo(owo), ?foo(2)
+                     , foo, ?bar(2), ?bar(44)
+                     ])
               ).
 
-spng_fail_test() ->
-  ?assertError( {panic, #{?snk_kind := ?error_msg}}
-              , ?SPNG([?foo(1), ?bar(owo), foo, ?foo(owo), ?bar(1), bar])
-              ).
-
-fpng_success_test() ->
-  ?assertMatch( []
-              , ?FPNG([])
-              ),
-  ?assertMatch( []
-              , ?FPNG([#{quux => 1}, #{quux => 2}])
-              ),
-  ?assertMatch( [?pair(1), ?pair(owo)]
-              , ?FPNG([?foo(1), ?foo(owo), foo, ?bar(owo), ?bar(1), bar])
-              ),
-  ?assertMatch( [?singleton(1), ?pair(2)]
-              , ?FPNG([?foo(1), ?foo(2), foo, ?bar(2), bar])
-              ),
-  ?assertMatch( [?singleton(1), ?pair(2), ?pair(owo)]
-              , ?FPNG([?foo(1), ?foo(2), ?bar(2), ?foo(owo), ?bar(owo)])
-              ),
-  ?assertMatch( [?singleton(1), ?singleton(owo), ?pair(2)]
-              , ?FPNG([ ?foo(1), ?bar(owo), ?foo(owo), ?foo(2)
-                      , foo, ?bar(2), ?bar(44)
-                      ])
+spng_unmatched_effect_test() ->
+  ?assertMatch( [?pair(1), ?unmatched_effect(owo), ?unmatched_cause(owo)]
+              , ?PNG([?foo(1), ?bar(owo), foo, ?foo(owo), ?bar(1), bar])
               ).
 
 wcwg_succ_test() ->
@@ -115,33 +92,33 @@ wcwg_fail_test() ->
               , ?WCWG([?foo(2), ?bar(1)])
               ).
 
-fpng_scoped_test() ->
+png_scoped_test() ->
   %% Test that match specs in ?find_pairs capture variables from the
   %% context:
   _A = owo,
   ?assertMatch( [?pair(owo)]
-              , ?FPNG([?foo(1), ?foo(owo), foo, ?bar(owo), ?bar(1), bar])
+              , ?PNG([?foo(1), ?foo(owo), foo, ?bar(owo), ?bar(1), bar])
               ).
 
 -define(pair_inc(A), {pair, #{foo := A}, #{bar := A + 1}}).
 
-spwg_success_test() ->
+pwg_success_test() ->
   ?assertMatch( []
-              , ?SPWG([])
+              , ?PWG([])
               ),
   ?assertMatch( []
-              , ?SPWG([#{quux => 1}, #{quux => 2}])
+              , ?PWG([#{quux => 1}, #{quux => 2}])
               ),
   ?assertMatch( [?pair_inc(1), ?pair_inc(2)]
-              , ?SPWG([?foo(1), foo, ?foo(2), ?bar(2), ?bar(3)])
+              , ?PWG([?foo(1), foo, ?foo(2), ?bar(2), ?bar(3)])
               ),
-  ?assertMatch( [?singleton(1), ?pair_inc(2)]
-              , ?SPWG([?foo(1), ?foo(2), foo, ?bar(3), bar])
+  ?assertMatch( [?unmatched_cause(1), ?pair_inc(2)]
+              , ?PWG([?foo(1), ?foo(2), foo, ?bar(3), bar])
               ).
 
-spwg_fail_test() ->
-  ?assertError( {panic, _}
-              , ?SPWG([?foo(2), ?bar(1)])
+pwg_unmatched_test() ->
+  ?assertMatch( [?unmatched_cause(2), ?unmatched_effect(1)]
+              , ?PWG([?foo(2), ?bar(1)])
               ).
 
 scng_succ_test() ->
